# AMT-Regime-Quantitative-Algorithm

./: .gitignore  PROJECT_PLAN.md  README.md  STATE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: notify-discord.yml
configs/: fracdiff_d_values.json
planAndStateLog/: DEVELOPMENT_PLAN.md  SESSION_WORKFLOW.md  STATE.md
src/classifier/: labels.py  splits.py  verify_splits.py
src/data/: clean.py  download.py  verify_plot.py
src/features/: assemble.py  fracdiff.py  macro.py  momentum.py  stationarity.py  timeseries.py  trend.py  verify_macro.py  verify_momentum.py  verify_stationarity.py  verify_timeseries.py  verify_trend.py  verify_volatility.py  verify_volume.py  volatility.py  volume.py
src/labeller/: labeller.py  verify_labeller.py
tests/classifier/: test_labels.py  test_splits.py
tests/data/: test_clean.py  test_download.py
tests/features/: test_assemble.py  test_fracdiff.py  test_macro.py  test_momentum.py  test_stationarity.py  test_timeseries.py  test_trend.py
tests/labeller/: test_labeller.py
